--- a/app/src/main/res/menu/menu_activity_main_drawer.xml
+++ b/app/src/main/res/menu/menu_activity_main_drawer.xml
@@ -15,6 +15,11 @@
             android:id="@+id/nav_maps"
             android:icon="@drawable/ic_map"
             android:title="@string/menu_maps" />
+
+        <item
+            android:id="@+id/create_post"
+            android:title="@string/create_new_post"
+            />
     </group>
 
     <group
