--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,7 @@
         tools:layout="@layout/fragment_maps" />
 
     <fragment
-        android:id="@+id/create_post"
+        android:id="@+id/nav_create_post"
         android:name="com.magikarp.android.ui.posts.PostFragment"
         android:label="Create Post"
         tools:layout="@layout/fragment_post" />
