--- a/app/src/main/res/menu/menu_activity_main_drawer.xml
+++ b/app/src/main/res/menu/menu_activity_main_drawer.xml
@@ -8,18 +8,14 @@
         android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_login"
-            android:icon="@drawable/ic_login"
-            android:title="@string/menu_login" />
-        <item
             android:id="@+id/nav_maps"
             android:icon="@drawable/ic_map"
             android:title="@string/menu_maps" />
-
         <item
-            android:id="@+id/create_post"
-            android:title="@string/create_new_post"
-            />
+            android:id="@+id/nav_my_posts"
+            android:icon="@drawable/ic_map"
+            android:title="@string/menu_my_posts" />
+
     </group>
 
     <group
