--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -13,7 +13,7 @@
             android:title="@string/menu_login" />
         <item
             android:id="@+id/nav_my_posts"
-            android:icon="@drawable/ic_map"
+            android:icon="@drawable/ic_person_pin"
             android:title="@string/menu_my_posts" />
         <item
             android:id="@+id/nav_maps"
