--- a/app/src/main/res/menu/menu_activity_main_drawer.xml
+++ b/app/src/main/res/menu/menu_activity_main_drawer.xml
@@ -14,7 +14,7 @@
         <item
             android:id="@+id/nav_my_posts"
             android:icon="@drawable/ic_map"
-            android:title="@string/menu_my_posts" />
+            android:title="@string/menu_my_locations" />
 
     </group>
 
