--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,12 +6,6 @@
     app:startDestination="@+id/nav_maps">
 
     <fragment
-        android:id="@+id/nav_login"
-        android:name="com.magikarp.android.ui.login.LoginFragment"
-        android:label="@string/title_fragment_login"
-        tools:layout="@layout/fragment_login" />
-
-    <fragment
         android:id="@+id/nav_maps"
         android:name="com.magikarp.android.ui.maps.MapsFragmentWrapper"
         android:label="@string/title_fragment_maps"
@@ -99,6 +93,35 @@
         <argument
             android:name="@string/args_image_uri"
             app:argType="string"
+            app:nullable="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_post_sideload"
+        android:name="com.magikarp.android.ui.posts.PostFragment"
+        android:label="@string/title_fragment_view_post"
+        tools:layout="@layout/fragment_post">
+        <argument
+            android:name="@string/args_is_editable"
+            android:defaultValue="true"
+            app:argType="boolean" />
+        <argument
+            android:name="@string/args_latitude"
+            app:argType="float"
+            app:defaultValue="37.7749" />
+        <argument
+            android:name="@string/args_longitude"
+            app:argType="float"
+            app:defaultValue="-122.4194" />
+        <argument
+            android:name="@string/args_text"
+            app:argType="string"
+            app:defaultValue="San Francisco"
+            app:nullable="true" />
+        <argument
+            android:name="@string/args_image_uri"
+            app:argType="string"
+            app:defaultValue="https://simple.wikipedia.org/wiki/San_Francisco#/media/File:SF_From_Marin_Highlands3.jpg"
             app:nullable="true" />
     </fragment>
 
