--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -11,7 +11,7 @@
     android:paddingBottom="0dp"
     tools:context=".ui.posts.PostFragment">
 
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/create_post_image_preview"
         android:layout_width="0dp"
         android:layout_height="180dp"
@@ -27,12 +27,13 @@
     <EditText
         android:id="@+id/create_post_caption"
         android:layout_width="0dp"
-        android:layout_height="240dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:selectAllOnFocus="true"
+        android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
