--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -14,7 +14,7 @@
         <item
             android:id="@+id/nav_my_posts"
             android:icon="@drawable/ic_person_pin"
-            android:title="@string/menu_my_locations" />
+            android:title="@string/menu_my_places" />
         <item
             android:id="@+id/nav_maps"
             android:icon="@drawable/ic_map"
