--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,13 +12,21 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <com.android.volley.toolbox.NetworkImageView
-        android:id="@+id/drawer_header_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/nav_header_desc"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:cardCornerRadius="39dp">
+
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/drawer_header_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/nav_header_desc"
+            android:scaleType="centerInside"
+            app:srcCompat="@mipmap/ic_launcher_round" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/drawer_header_name"
