--- a/app/src/main/res/menu/menu_post_view.xml
+++ b/app/src/main/res/menu/menu_post_view.xml
@@ -7,6 +7,7 @@
         android:icon="@drawable/ic_directions"
         android:orderInCategory="100"
         android:title="@string/get_directions"
+        android:visible="false"
         app:showAsAction="ifRoom" />
 
 </menu>
