--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -11,18 +11,32 @@
     android:paddingBottom="0dp"
     tools:context=".ui.posts.PostFragment">
 
-    <com.android.volley.toolbox.NetworkImageView
-        android:id="@+id/create_post_image_preview"
-        android:layout_width="0dp"
+    <FrameLayout
+        android:id="@+id/image_container"
+        android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
-        android:contentDescription="@string/image_preview"
-        android:src="@drawable/ic_menu_gallery"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/post_container">
+
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/create_post_network_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/image_preview"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_menu_gallery" />
+
+        <ImageView
+            android:id="@+id/create_post_local_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/image_preview"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_menu_gallery" />
+
+    </FrameLayout>
 
     <EditText
         android:id="@+id/create_post_caption"
@@ -31,12 +45,13 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
+        android:autofillHints="post_text"
+        android:hint="@string/edit_text_hint"
         android:inputType="textMultiLine"
         android:scrollbars="vertical"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/create_post_image_preview" />
+        app:layout_constraintTop_toBottomOf="@id/image_container" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
