--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_maps"
-        android:name="com.magikarp.android.ui.maps.MapsFragmentWrapper"
+        android:name="com.magikarp.android.ui.maps.MapsFragment"
         android:label="@string/title_fragment_maps"
         tools:layout="@layout/fragment_maps">
         <argument
