--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -18,4 +18,7 @@
     <!-- Settings UI -->
     <string name="array_max_records">max_records</string>
 
+    <!-- Maps fragment -->
+    <string name="max_records_default">20</string>
+
 </resources>
