--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/image_preview"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_menu_gallery" />
+            android:src="@android:drawable/ic_menu_gallery" />
 
         <ImageView
             android:id="@+id/create_post_local_image"
@@ -34,7 +34,7 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/image_preview"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_menu_gallery" />
+            android:src="@android:drawable/ic_menu_gallery" />
 
     </FrameLayout>
 
