Android maps location (#70)
* Add TestPostFragment

* Add location to map and refactor code for testing

* Updated tests

* Added additional test

* Account change listener and testing updates

* Build / lint cleanup and permission flow refactor

* Unit tests for help and settings fragments

* Downgraded AndroidX test version for Android Test

* Backed out Robolectric unit tests

Co-authored-by: Charlie Summers <charlie@gomerits.com>
Co-authored-by: Wade Johnson <wmj2108@columbia.edu>

--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -4,7 +4,7 @@
     <!-- Server endpoints -->
     <string name="server_url">http://35.190.179.162:7000</string>
     <string name="server_get_messages">/messages</string>
-    <string name="server_get_user_messages">/messages/?</string>
+    <string name="server_get_user_messages">/messages/%s</string>
 
     <!-- Fragment arguments -->
     <string name="args_is_editable">is_editable</string>
@@ -16,6 +16,9 @@
     <string name="fragment_tag_maps">tag_maps</string>
 
     <!-- Settings UI -->
-    <string name="array_max_records">max_records</string>
+    <string name="preference_key_max_records">max_records</string>
+
+    <!-- Maps fragment -->
+    <string name="max_records_default">20</string>
 
 </resources>
