--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -54,25 +54,6 @@
         android:id="@+id/nav_post_viewer"
         android:name="com.magikarp.android.ui.posts.PostFragment"
         android:label="@string/title_fragment_view_post"
-        tools:layout="@layout/fragment_post">
-        <argument
-            android:name="@string/args_is_editable"
-            android:defaultValue="false"
-            app:argType="boolean" />
-        <argument
-            android:name="@string/args_latitude"
-            app:argType="java.lang.Double" />
-        <argument
-            android:name="@string/args_longitude"
-            app:argType="java.lang.Double" />
-        <argument
-            android:name="@string/args_text"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
-            android:name="@string/args_image_uri"
-            app:argType="string"
-            app:nullable="true" />
-    </fragment>
+        tools:layout="@layout/fragment_post" />
 
 </navigation>
